@@ -4,6 +4,12 @@ Release Notes
 Project site:     http://code.google.com/p/google-api-objectivec-client/
 Discussion group: http://groups.google.com/group/google-api-objectivec-client
 
+
+15-March-2012
+
+Moved base64 encoding and decoding support to GTLBase64 file.
+
+
 22-December-2011
 
 Fixed waitForTicket's return value on delete fetches.
